# hie

./: .ghci  .gitignore  Readme.md  haskell-interactive-environment.cabal  index.html  stack.yaml
hie-js/: .ghci  LICENSE  hie-js.cabal  stack.yaml
hie-js/app/: Main.hs
hie-js/src/: Lib.hs
hie-js/src/Data/: HasInstance.hs
hie-js/src/Data/Dynamic/: PolyDyn.hs  TypeClasses.hs
hie-js/src/Hie/: Session.hs
hie-js/src/Hie/Ui/: DocumentContainer.hs  DownloadLink.hs  Func.hs  List.hs  NonShowable.hs  TextLabel.hs  Types.hs
hie-js/src/Reflex/: Aux.hs
nix/: default.nix  shell.nix  shell.sh  trivialbuilder.sh
src/Graphics/: HIE.hs
src/Graphics/HIE/: AST.hs  Eval.hs  Gtk.hs  Hint.hs  Persist.hs  Session.hs  ThreePenny.hs
stack/: ghc-7.10.2.yaml
